# effects-landscape

./: .gitignore  CHANGELOG.md  README.md  effects-landscape.cabal  hie.yaml
app/: AppCleff.hs  AppFreerSimple.hs  AppFusedEffects.hs  AppHasTransformers.hs  AppMtl.hs  AppPolysemy.hs  AppRWSTMtl.hs  AppRWSTTransformers.hs  AppRio.hs  Commons.hs  Inference.hs  Main.hs  Types.hs
app/Internal/: Cleff.hs  FusedEffects.hs  HasTransformers.hs  Mtl.hs  RWSTTransformers.hs
inference/: Main.hs
src/: Commons.hs  Types.hs
src/Internal/: WithCleff.hs  WithEffectful.hs  WithExtensibleEffects.hs  WithFreerSimple.hs  WithFusedEffects.hs  WithHasTransformers.hs  WithMtl.hs  WithPolysemy.hs  WithRIO.hs  WithRWSTMtl.hs  WithRWSTTransformers.hs
test/: AppSpec.hs  Main.hs
test/Internal/: WithCleffSpec.hs  WithEffectfulSpec.hs  WithExtensibleEffectsSpec.hs  WithFreerSimpleSpec.hs  WithFusedEffectsSpec.hs  WithHasTransformersSpec.hs  WithMtlSpec.hs  WithPolysemySpec.hs  WithRIOSpec.hs  WithRWSTMtlSpec.hs  WithRWSTTransformersSpec.hs
v0/: AppEffectful.hs  AppExtensibleEffects.hs  Main.hs  README.md
v0/Internal/: Effectful.hs  ExtensibleEffects.hs  FreerSimple.hs  Polysemy.hs  RIO.hs  RWSTMtl.hs
v1/: App.hs  Main.hs  README.md
